# simple-dantd

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.sh
src/api/: routes.py
src/config/: settings.py
src/providers/: __init__.py  system.py  user_manager.py
src/schema/: __init__.py  models.py
src/services/: __init__.py  dante.py  deployment.py  setup.py  state.py
tests/: __init__.py  conftest.py
tests/test_api/: test_routes.py
tests/test_providers/: test_system.py
tests/test_services/: test_deployment.py  test_setup.py  test_state.py
web/static/: style.css
web/templates/: index.html  login.html  result.html  setup.html
