[project]
name = "simple-dantd"
version = "0.1.0"
description = "A simple SOCKS5 management web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--cov=src",
    "--cov-report=term-missing"
]
